@@ -1,3 +1,9 @@
+Fri Dec 11 11:38:14 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* compile.c (iseq_compile_each, ibf_load_object_hash): rehash
+	  case-dispatch hash to reduce collisions.
+	  http://d.hatena.ne.jp/ku-ma-me/20151210
+
 Fri Dec 11 03:44:43 2015  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* object.c (rb_inspect): dump inspected result with rb_str_escape()
